notes.txt
googled some tutorials
one mentioned the "sample" library https://docs.rs/sample/0.10.0/sample/
how to write out little-endian? https://docs.rs/byteorder/1.3.2/byteorder/
how to play sounds? https://docs.rs/portaudio/0.7.0/portaudio/

using ?

error: `core::str::<impl str>::as_bytes` is not yet stable as a const fn
had to add #![feature(const_str_as_bytes)]
found the b"" notation by looking at the docs for as_bytes - feature no longer needed

into() function to cast nums - discovered via an error message

error[E0308]: mismatched types
  --> src/main.rs:31:9
   |
31 |         i16::MAX,
   |         ^^^^^^^^ expected f64, found i16
help: you can convert an `i16` to `f64`, producing the floating point representation of the integer
   |
31 |         i16::MAX.into(),
   |         ^^^^^^^^^^^^^^^

the trait `std::convert::From<f64>` is not implemented for `i16` - probably because lossless conversion is not always possible
<i16 as std::convert::From<bool>>
<i16 as std::convert::From<i8>>
<i16 as std::convert::From<std::num::NonZeroI16>>
<i16 as std::convert::From<u8>>

switched to doing a dumb iteration with a counter to using `take` and directly iterating

explain how the chaining works

Why aren't functions like `sqrt` and `powf` const?
